--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "^13.10.5",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
